[package]
name = "checkwright"
version = "0.0.0"
edition = "2021"
description = "Name reservation for Checkwright — a coding-agent-assisted delivery methodology (gate SDK, evidence-stamped lifecycle, agent context economics). Real releases will start at 0.1.0."
license = "Apache-2.0"
repository = "https://github.com/checkwright/checkwright"
readme = "README.md"

[lib]
path = "src/lib.rs"
